le fix du overflow marche pas );

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body, menu, ul, h1, h2, h3, p
 {
 	margin: 0;
 	padding: 0;
-	overflow: clip;
 }
 
 body
